--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   vue-rtc:
     build:
-      context: ./src/vue-rtc
+      context: ./vue-rtc
       dockerfile: ./Dockerfile
     networks:
       - rtc
@@ -11,7 +11,7 @@ services:
     container_name: vue-rtc
   nest-server:
     build:
-      context: ./src/nest-server-rtc
+      context: ./nest-server-rtc
       dockerfile: ./Dockerfile
     networks:
       - rtc
@@ -20,7 +20,7 @@ services:
     container_name: nest-server-rtc
   proxy:
     build:
-      context: ./src/proxy
+      context: ./proxy
       dockerfile: ./Dockerfile
     depends_on:
       - vue-rtc
