--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
   "author": "tho",
   "license": "MIT",
   "dependencies": {
-    "lerna": "^3.20.2"
+    "pm2": "^5.3.0"
   },
   "scripts": {
-    "setup:env":"npm run setup:env-be && npm run setup:env-fe",
-    "setup:env-be":"cd nest-server-rtc && cp .env.template .env",
-    "setup:env-fe":"cd vue-rtc && cp .env.template .env",
-    "build":"docker-compose build ",
-    "rebuild":"docker-compose up --build -f",
+    "setup:env": "npm run setup:env-be && npm run setup:env-fe",
+    "setup:env-be": "cd nest-server-rtc && cp .env.template .env",
+    "setup:env-fe": "cd vue-rtc && cp .env.template .env",
+    "build": "docker-compose build ",
+    "rebuild": "docker-compose up --build -f",
     "up": "docker-compose up -d",
     "down": "docker-compose down",
     "restart": "docker-compose restart",
     "log:fe": "docker logs vue-rtc -f",
-    "log:be":"docker logs nest-server-rtc -f",
-    "log:proxy":"docker logs proxy -f",
-    "start:fe":"cd vue-rtc && npm i && npm run serve",
-    "start:be":"cd nest-server-rtc && npm i && npm run start:dev"
+    "log:be": "docker logs nest-server-rtc -f",
+    "log:proxy": "docker logs proxy -f",
+    "start:fe": "cd vue-rtc && npm i && npm run serve",
+    "start:be": "cd nest-server-rtc && npm i && npm run start:dev",
+    "pm2:start": "pm2 start pm2.config.js",
+    "pm2:stop": "pm2 stop all",
+    "pm2:restart": "pm2 restart all",
+    "pm2:delete": "pm2 delete all",
+    "pm2:log": "pm2 monit"
   }
 }
