--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "setup:env": "npm run setup:env-be && npm run setup:env-fe",
     "setup:env-be": "cd nest-server-rtc && cp .env.template .env",
     "setup:env-fe": "cd vue-rtc && cp .env.template .env",
-    "build": "docker-compose build ",
+    "build": "docker-compose build --no-cache",
     "rebuild": "docker-compose up --build -f",
     "up": "docker-compose up -d",
     "down": "docker-compose down",
-    "restart": "docker-compose restart",
+    "deleteimg":"docker-compose rm -v ",
+    "restart": "npm run down && npm run deleteimg && npm run build && npm run up",
     "log:fe": "docker logs vue-rtc -f",
     "log:be": "docker logs nest-server-rtc -f",
     "log:proxy": "docker logs proxy -f",
