--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -16,6 +16,8 @@ server {
 
     location ~* ^/api/ {
         rewrite ^/(.*) /$1 break;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass DOMAIN_BE;
     }
     proxy_connect_timeout       600;
@@ -35,6 +37,8 @@ server {
 
     location ~* ^/ {
         rewrite ^/(.*) /$1 break;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass DOMAIN_BE;
     }
     proxy_connect_timeout       600;
