--- a/vue-rtc/package.json
+++ b/vue-rtc/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.0",
+    "moment": "^2.29.4",
     "peerjs": "^1.4.7",
     "sharp": "^0.32.0",
     "skyway-js": "^4.4.5",
