--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - 8080:8080
     container_name: vue-rtc
     volumes:
-      - ../src/vue-rtc:/projectRTC-vue-rtc
+      - ./vue-rtc:/vue-rtc
   nest-server:
     build:
       context: ./nest-server-rtc
@@ -21,7 +21,7 @@ services:
       - 8001:8001
     container_name: nest-server-rtc
     volumes:
-      - ../src/nest-server-rtc:/projectRTC-nest-server
+      - ./nest-server-rtc:/nest-server-rtc
   proxy:
     build:
       context: ./proxy
