--- a/nest-server-rtc/package.json
+++ b/nest-server-rtc/package.json
@@ -61,7 +61,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
-    "ts-node": "10.7.0",
+    "ts-node": "^10.7.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "4.5.2"
   },
