--- a/nest-server-rtc/package.json
+++ b/nest-server-rtc/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.0",
     "@nestjs/websockets": "^9.4.0",
+    "aws-lambda": "^1.0.7",
+    "aws-serverless-express": "^3.4.0",
     "dotenv": "^16.0.3",
     "joi": "^17.9.2",
     "moment": "^2.29.4",
