--- a/vue-rtc/package.json
+++ b/vue-rtc/package.json
@@ -22,6 +22,7 @@
     "socket.io-client": "^4.6.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-server-renderer": "^2.7.14",
     "vue-socket.io": "^3.0.10",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
