--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -4,10 +4,17 @@ on:
     branches:
       - main
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run a command
         run: 'echo "Hello, world!"'
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run a command
+        run: whoami
