--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -26,13 +26,13 @@ jobs:
       - name: Configure SSH key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo ${{ secrets.SSH_PRIVATE_KEY }} > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -t rsa 94.237.79.161 >> ~/.ssh/known_hosts
 
       - name: Read SSH key
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}"
+          echo ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Remote SSH command
         run: |
