--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Read SSH key
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}""
+          echo "${{ secrets.SSH_PRIVATE_KEY }}"
 
       - name: Remote SSH command
         run: |
