--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: SSH to remote server
+        id: ssh
         uses: appleboy/ssh-action@master
         with:
           host: 94.237.79.161
@@ -30,3 +31,16 @@ jobs:
 
       - name: cleanup
         run: rm -rf ~/.ssh
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+
+        - name: SSH to remote server
+          uses: appleboy/ssh-action@master
+          with: ${{ steps.ssh.outputs }}
+        - name: Run deployment script
+          run: |
+            cd workspace && ls -la
