--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -17,17 +17,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: SSH to remote server
-        id: ssh
-        uses: appleboy/ssh-action@master
+      - name: Copy code to server
+        uses: appleboy/scp-action@master
         with:
           host: 94.237.79.161
           username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
-          script: |
-           cd workspace && ls -la
+          source: "."
+          target: "/workspace/testCICD/projectRTC"
 
       - name: cleanup
         run: rm -rf ~/.ssh
@@ -40,7 +38,13 @@ jobs:
 
         - name: SSH to remote server
           uses: appleboy/ssh-action@master
-          with: ${{ steps.ssh.outputs }}
+          with:
+            host: 94.237.79.161
+            username: root
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
+            port: 22
+            script: |
+              cd workspace && ls -la
         - name: Run deployment script
           run: |
             cd workspace && ls -la
