--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Run a command
         run: 'echo "Hello, world!"'
   build:
@@ -17,6 +18,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: source code
+        run: ls -la
+
       - name: Copy code to server
         uses: appleboy/scp-action@master
         with:
