--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: source code
-        run: ls -la
+        run: ls
 
       - name: Copy code to server
         uses: appleboy/scp-action@master
