--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,14 +20,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Copy code to server
-        uses: appleboy/ssh-action@master
+        uses: appleboy/scp-action@v0.1.4
         with:
            host: 94.237.79.161
            username: root
            key: ${{ secrets.SSH_PRIVATE_KEY }}
            port: 22
-           script: |
-            cp -R . /workspace/testCICD
+           source: ./*
+           target: /workspace/testCICD
 
       - name: cleanup
         run: rm -rf ~/.ssh
@@ -49,4 +49,5 @@ jobs:
               cd /workspace/testCICD && echo "${{ env.ENV_FE }}" > ./vue-rtc/.env
               cd /workspace/testCICD && echo "${{ env.ENV_BE }}" > ./nest-server-rtc/.env
               cd /workspace/testCICD && echo "${{ env.ENV_PROXY }}" > ./proxy/.env
-         
+              ls
+
