--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # - name: Install dependencies
       #   run: npm install
@@ -22,11 +22,15 @@ jobs:
       - name: Archive files
         run: zip -r lambda.zip ./*   # Đây là câu lệnh để nén các tệp vào lambda.zip, giả sử tệp được xây dựng được đặt trong thư mục "dist"
 
-
-      - name: view sourtce
-        run: cd lambda && ls
       - name: Preview
         run: ls
+
+      - name: Unzip files
+        run: |
+          unzip lambda.zip -d extracted   # Đây là câu lệnh để giải nén tệp zip vào thư mục "extracted"
+
+      - name: List extracted files
+        run: ls extracted
       # - name: Deploy to Lambda
       #   uses: appleboy/lambda-action@v2
       #   with:
