--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -6,31 +6,64 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build-fe:
     runs-on: ubuntu-latest
-
+    # if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install dependencies
+        run: npm install
 
-      # - name: Build
-      #   run: npm run build
+      - name: Build
+        run: npm run build
 
       - name: Archive files
-        run: zip -r lambda.zip ./*   # Đây là câu lệnh để nén các tệp vào lambda.zip, giả sử tệp được xây dựng được đặt trong thư mục "dist"
+        run: zip -r ../codebuild/fe.zip ./*
+  build-be:
+    runs-on: ubuntu-latest
+    # if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Preview
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Archive files
+        run: zip -r ../codebuild/be.zip ./*
+  deploy-fe:
+    runs-on: ubuntu-latest
+    needs: build-fe
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: check code
+        run: ls
+      # - name: Deploy to Lambda
+      #   uses: appleboy/lambda-action@v2
+      #   with:
+      #     aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws_region: "us-east-1"
+      #     function_name: "my-lambda-function"
+      #     zip_file: lambda.zip
+
+  deploy-be:
+    runs-on: ubuntu-latest
+    needs: build-be
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: check code
         run: ls
 
-      - name: Unzip files
-        run: |
-          unzip lambda.zip -d extracted   # Đây là câu lệnh để giải nén tệp zip vào thư mục "extracted"
-
-      - name: List extracted files
-        run: ls extracted
       # - name: Deploy to Lambda
       #   uses: appleboy/lambda-action@v2
       #   with:
