--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Open working-directory
+        run: cd vue-rtc
+
       - name: Install dependencies
         run: npm install
 
@@ -27,6 +30,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Open working-directory
+        run: cd nest-server-rtc
 
       - name: Install dependencies
         run: npm install
