--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -33,7 +33,7 @@ jobs:
         run: cd vue-rtc && ls
 
       - name: unzip file
-        run: cd vue-rtc && mkdir unzip unzip fe.zip -d ./unzip
+        run: cd vue-rtc && mkdir unzip && unzip fe.zip -d ./unzip
 
       - name: preview unzip
         run: cd vue-rtc && cd unzip && ls -la
@@ -75,7 +75,7 @@ jobs:
         run: cd nest-server-rtc && ls
 
       - name: unzip file
-        run: cd vue-rtc && mkdir unzip unzip be.zip -d ./unzip
+        run: cd vue-rtc && mkdir unzip && unzip be.zip -d ./unzip
 
       - name: preview unzip
         run: cd vue-rtc && cd unzip && ls -la
